force-app/main/default/objects/Fundraiser_Participation__c/Fundraiser_Participation__c.object-meta.xml
<CustomObject>
    <description>Used for tracking information about people who attend events.  Includes dietary requirements license etc.</description>
    <label>Fundraising Participation</label>
    <nameField>
        <displayFormat>FAN-{0000}</displayFormat>
        <label>Fundraiser Attendance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fundraising Participation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>