force-app/main/default/objects/Fundraiser_Participation__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Fundraising Participation</relationshipLabel>
    <relationshipName>Fundraising_Participation</relationshipName>
    <type>Lookup</type>
</CustomField>