force-app/main/default/objects/Fundraiser_Participation__c/fields/Code_Of_Conduct__c.field-meta.xml
<CustomField>
    <fullName>Code_Of_Conduct__c</fullName>
    <label>Code Of Conduct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>