force-app/main/default/objects/Fundraiser_Participation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is for individuals attending an event.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fundraising Participation</relationshipLabel>
    <relationshipName>Fundraising_Participation</relationshipName>
    <type>Lookup</type>
</CustomField>