force-app/main/default/objects/Fundraiser_Participation__c/fields/Dietary_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Requirements__c</fullName>
    <label>Dietary Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>