force-app/main/default/objects/Fundraiser_Participation__c/fields/Drivers_License_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_Expiry__c</fullName>
    <label>Drivers License Expiry</label>
    <type>Date</type>
</CustomField>