force-app/main/default/objects/Fundraiser_Participation__c/fields/Drivers_License_State__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_State__c</fullName>
    <label>Drivers License State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>