force-app/main/default/objects/Fundraiser_Participation__c/fields/Emg_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emg_Contact_Name__c</fullName>
    <label>Emg Contact Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>