force-app/main/default/objects/Fundraiser_Participation__c/fields/esCarpade_Experience__c.field-meta.xml
<CustomField>
    <fullName>esCarpade_Experience__c</fullName>
    <label>esCarpade Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>