force-app/main/default/objects/Fundraiser_Participation__c/fields/escarpade_Trophy_Cat__c.field-meta.xml
<CustomField>
    <fullName>escarpade_Trophy_Cat__c</fullName>
    <label>escarpade Trophy Cat</label>
    <length>100</length>
    <type>Text</type>
</CustomField>