force-app/main/default/objects/Fundraiser_Participation__c/fields/Event_Role__c.field-meta.xml
<CustomField>
    <fullName>Event_Role__c</fullName>
    <label>Event Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>