force-app/main/default/objects/Fundraiser_Participation__c/fields/Fundraising_Participation_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Participation_Contact_ID__c</fullName>
    <description>Contact ID</description>
    <formula>Contact__r.Id</formula>
    <label>Fundraising Participation Contact ID</label>
    <type>Text</type>
</CustomField>