force-app/main/default/objects/Fundraiser_Participation__c/fields/Funds_Raised_Team__c.field-meta.xml
<CustomField>
    <fullName>Funds_Raised_Team__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How much did the team raise?</description>
    <label>Funds Raised Team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>