force-app/main/default/objects/Fundraiser_Participation__c/fields/Golf_Handicap__c.field-meta.xml
<CustomField>
    <fullName>Golf_Handicap__c</fullName>
    <label>Golf Handicap</label>
    <length>100</length>
    <type>Text</type>
</CustomField>