force-app/main/default/objects/Fundraiser_Participation__c/fields/How_Did_You_Hear_About_This_Event__c.field-meta.xml
<CustomField>
    <fullName>How_Did_You_Hear_About_This_Event__c</fullName>
    <label>How Did You Hear About This Event</label>
    <length>100</length>
    <type>Text</type>
</CustomField>