force-app/main/default/objects/Fundraiser_Participation__c/fields/ImportID__c.field-meta.xml
<CustomField>
    <fullName>ImportID__c</fullName>
    <externalId>true</externalId>
    <label>ImportID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>