force-app/main/default/objects/Fundraiser_Participation__c/fields/Indemnity_Form__c.field-meta.xml
<CustomField>
    <fullName>Indemnity_Form__c</fullName>
    <label>Indemnity Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>