force-app/main/default/objects/Fundraiser_Participation__c/fields/Jersey_Size__c.field-meta.xml
<CustomField>
    <fullName>Jersey_Size__c</fullName>
    <label>Jersey Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>