force-app/main/default/objects/Fundraiser_Participation__c/fields/Knicks_Size__c.field-meta.xml
<CustomField>
    <fullName>Knicks_Size__c</fullName>
    <label>Knicks Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>