force-app/main/default/objects/Fundraiser_Participation__c/fields/Medical_Info__c.field-meta.xml
<CustomField>
    <fullName>Medical_Info__c</fullName>
    <label>Medical Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>