force-app/main/default/objects/Fundraiser_Participation__c/fields/Medication_Required__c.field-meta.xml
<CustomField>
    <fullName>Medication_Required__c</fullName>
    <label>Medication Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>