force-app/main/default/objects/Fundraiser_Participation__c/fields/Merchandise__c.field-meta.xml
<CustomField>
    <fullName>Merchandise__c</fullName>
    <label>Merchandise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>