force-app/main/default/objects/Fundraiser_Participation__c/fields/Motiviation_For_Fundraising__c.field-meta.xml
<CustomField>
    <fullName>Motiviation_For_Fundraising__c</fullName>
    <label>Motiviation For Fundraising</label>
    <length>100</length>
    <type>Text</type>
</CustomField>