force-app/main/default/objects/Fundraiser_Participation__c/fields/No_Tables__c.field-meta.xml
<CustomField>
    <fullName>No_Tables__c</fullName>
    <label>No Tables</label>
    <length>100</length>
    <type>Text</type>
</CustomField>