force-app/main/default/objects/Fundraiser_Participation__c/fields/No_Tickets__c.field-meta.xml
<CustomField>
    <fullName>No_Tickets__c</fullName>
    <label>No Tickets</label>
    <length>100</length>
    <type>Text</type>
</CustomField>