force-app/main/default/objects/Fundraiser_Participation__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fundraising Participation</relationshipLabel>
    <relationshipName>Fundraising_Participation</relationshipName>
    <type>Lookup</type>
</CustomField>