force-app/main/default/objects/Fundraiser_Participation__c/fields/Participation__c.field-meta.xml
<CustomField>
    <fullName>Participation__c</fullName>
    <label>Participation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>