force-app/main/default/objects/Fundraiser_Participation__c/fields/Physical_Goal__c.field-meta.xml
<CustomField>
    <fullName>Physical_Goal__c</fullName>
    <description>How many KMs they aimed to swim/walk/ride</description>
    <label>Physical Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>