force-app/main/default/objects/Fundraiser_Participation__c/fields/Physical_Goal_Reached__c.field-meta.xml
<CustomField>
    <fullName>Physical_Goal_Reached__c</fullName>
    <description>How many KMs they did swim/walk/ride</description>
    <label>Physical Goal Reached</label>
    <length>18</length>
    <type>Text</type>
</CustomField>