force-app/main/default/objects/Fundraiser_Participation__c/fields/Previous_Participation__c.field-meta.xml
<CustomField>
    <fullName>Previous_Participation__c</fullName>
    <label>Previous Participation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>