force-app/main/default/objects/Fundraiser_Participation__c/fields/Privacy_Policy_Signed__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Policy_Signed__c</fullName>
    <label>Privacy Policy Signed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>