force-app/main/default/objects/Fundraiser_Participation__c/fields/Safeguarding_Policy__c.field-meta.xml
<CustomField>
    <fullName>Safeguarding_Policy__c</fullName>
    <label>Safeguarding Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>