force-app/main/default/objects/Fundraiser_Participation__c/fields/Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>Seat_Number__c</fullName>
    <label>Seat Number/Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>