force-app/main/default/objects/Fundraiser_Participation__c/fields/Seating_Notes__c.field-meta.xml
<CustomField>
    <fullName>Seating_Notes__c</fullName>
    <label>Seating/Group Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>