force-app/main/default/objects/Fundraiser_Participation__c/fields/Shirts__c.field-meta.xml
<CustomField>
    <fullName>Shirts__c</fullName>
    <label>Shirts</label>
    <length>100</length>
    <type>Text</type>
</CustomField>