force-app/main/default/objects/Fundraiser_Participation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>How was this contact involved in the fundraising</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Team Leader</fullName>
            </value>
            <value>
                <fullName>Fundraiser</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
            <value>
                <fullName>Co-Driver</fullName>
            </value>
            <value>
                <fullName>Pillion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>