force-app/main/default/objects/Fundraiser_Participation__c/fields/Support_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Support_Vehicle__c</fullName>
    <label>Support Vehicle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>