force-app/main/default/objects/Fundraiser_Participation__c/fields/Team_Fundraising_Goal__c.field-meta.xml
<CustomField>
    <fullName>Team_Fundraising_Goal__c</fullName>
    <label>Team Fundraising Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>