force-app/main/default/objects/Fundraiser_Participation__c/fields/Vehicle_Engine_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Engine_Capacity__c</fullName>
    <label>Vehicle Engine Capacity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>