force-app/main/default/objects/Fundraiser_Participation__c/fields/Vehicle_Insurance_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Insurance_Expiry__c</fullName>
    <label>Vehicle Insurance Expiry</label>
    <type>Date</type>
</CustomField>