force-app/main/default/objects/Fundraiser_Participation__c/fields/Vehicle_Insurance_Policy_No__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Insurance_Policy_No__c</fullName>
    <label>Vehicle Insurance Policy No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>