force-app/main/default/objects/Fundraiser_Participation__c/fields/Vehicle_make__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_make__c</fullName>
    <label>Vehicle_make</label>
    <length>100</length>
    <type>Text</type>
</CustomField>