force-app/main/default/objects/Fundraiser_Participation__c/fields/Vehicle_Name__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Name__c</fullName>
    <label>Vehicle Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>