force-app/main/default/objects/Fundraiser_Participation__c/fields/Vehicle_Rego_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Rego_Number__c</fullName>
    <label>Vehicle Rego Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>