force-app/main/default/objects/Fundraiser_Participation__c/fields/Vehicle_Rego_State__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Rego_State__c</fullName>
    <label>Vehicle Rego State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>