force-app/main/default/objects/Fundraiser_Participation__c/fields/Vehicle_Safety_Check__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Safety_Check__c</fullName>
    <label>Vehicle Safety Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>