force-app/main/default/objects/Fundraiser_Participation__c/fields/Vehicle_Team__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Team__c</fullName>
    <label>Vehicle Team</label>
    <length>100</length>
    <type>Text</type>
</CustomField>