force-app/main/default/objects/Fundraiser_Participation__c/fields/Vehicle_Theme__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Theme__c</fullName>
    <label>Vehicle Theme</label>
    <length>100</length>
    <type>Text</type>
</CustomField>