force-app/main/default/objects/Fundraiser_Participation__c/fields/Vehicle_Year__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Year__c</fullName>
    <label>Vehicle Year</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>