force-app/main/default/objects/Fundraiser_Participation__c/fields/WWCC__c.field-meta.xml
<CustomField>
    <fullName>WWCC__c</fullName>
    <label>WWCC?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>